--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First GitHub Repo</title>
 </head>
 <body>
-    
+    <h1>My First GitHub Code</h1>
+    <h2>Iam Creat new Code</h2>
 </body>
 </html>
